--- a/DefineX-Odeme-Sistemi-Forms-Odevi/DefineX-Odeme-Sistemi-Forms-Odevi/DefineX-Odeme-Sistemi-Forms-Odevi.csproj
+++ b/DefineX-Odeme-Sistemi-Forms-Odevi/DefineX-Odeme-Sistemi-Forms-Odevi/DefineX-Odeme-Sistemi-Forms-Odevi.csproj
@@ -11,6 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
   </ItemGroup>
 
   <ItemGroup>
