Attribute Library project files added. Libraries added to project as a class library. DB management changed. Bug fixed. 'ZorunluAlanAttribute's Textbox bug fixed.

--- a/DefineX-Odeme-Sistemi-Forms-Odevi/DefineX-Odeme-Sistemi-Forms-Odevi/DefineX-Odeme-Sistemi-Forms-Odevi.csproj
+++ b/DefineX-Odeme-Sistemi-Forms-Odevi/DefineX-Odeme-Sistemi-Forms-Odevi/DefineX-Odeme-Sistemi-Forms-Odevi.csproj
@@ -20,4 +20,10 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="AttributesLibrary">
+      <HintPath>..\..\AttributesLibrary\AttributesLibrary\bin\Debug\net8.0\AttributesLibrary.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
